[package]
name = "gibmon"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.6.1"
image = "0.25.0"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"  # For YAML parsing
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.21"
